exports[`use various parts of svg-edit > check tool_fhpath #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
  fill="black"
  fill-opacity="1"
  stroke="none"
  stroke-opacity="1"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      style="pointer-events:inherit"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_source #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      style="pointer-events:inherit"
    ></rect>
  </g>
</svg>
`;

exports[`use various parts of svg-edit > check tool_text #0`] = `
<svg
  xmlns="http://www.w3.org/2000/svg"
  xmlns:svg="http://www.w3.org/2000/svg"
  width="640"
  height="480"
  id="svgcontent"
  overflow="visible"
  x="640"
  y="480"
  viewBox="0 0 640 480"
  fill="black"
  fill-opacity="1"
  stroke="none"
  stroke-opacity="1"
>
  <g class="layer" style="pointer-events:all">
    <title style="pointer-events:inherit">Layer 1</title>
    <rect
      id="rect"
      fill="#FF0000"
      height="70"
      stroke="#000000"
      stroke-width="5"
      width="94"
      x="69.5"
      y="51.5"
      style="pointer-events:inherit"
    ></rect>
    <text
      fill="#000000"
      stroke-width="0"
      style="pointer-events:inherit"
      x="116"
      y="86"
      id="svg_1"
      font-size="24"
      font-family="serif"
      text-anchor="middle"
      xml:space="preserve"
    ></text>
    <text
      fill="#000000"
      stroke-width="0"
      style="pointer-events: inherit; cursor: move;"
      x="116"
      y="86"
      id="svg_2"
      font-size="24"
      font-family="serif"
      text-anchor="middle"
      xml:space="preserve"
      fill-opacity="1"
      stroke="none"
      stroke-opacity="1"
    >
      12
    </text>
  </g>
</svg>
`;
